terraform/app/modules/k8s/yaml/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: backend-nodes
      containers:
      - name: backend
        image: 536284936715.dkr.ecr.eu-central-1.amazonaws.com/ihaq-backend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
